--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,7 +6,11 @@
     <string name="action_settings">Einstellungen</string>
     <string name="tab_apps">Apps</string>
     <string name="tab_rules">Regeln</string>
-    
+
+    <!-- Bottom navigation -->
+    <string name="nav_apps">Apps</string>
+    <string name="nav_rules">Regeln</string>
+
     <!-- Aktionen -->
     <string name="show_system">System-Apps anzeigen</string>
     <string name="select_all">Alle auswählen</string>
