--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,7 +6,11 @@
     <string name="action_settings">Settings</string>
     <string name="tab_apps">Apps</string>
     <string name="tab_rules">Rules</string>
-    
+
+    <!-- Bottom navigation -->
+    <string name="nav_apps">Apps</string>
+    <string name="nav_rules">Rules</string>
+
     <!-- Actions -->
     <string name="show_system">Show system apps</string>
     <string name="select_all">Select all</string>
